some source cleaning
Signed-off-by: Bernd Schuster <berndschuster@MacBook-Pro-von-Bernd.local>